# veridia

./: .coverage  .gitignore  AGENTS.md  json_schema_errors.py  pyproject.toml
.claude/commands/: README.md  create-tasks.md  phase-review.md  plan-phase.md  run-task-codex.md  run-task.md  task-review.md
.github/workflows/: ci.yml
artifact_validator/: README.md  __init__.py  __main__.py  cli.py  errors.py  schema_store.py  validator.py
change_impact_generator/: README.md  __init__.py  __main__.py  cli.py  diff_parser.py  generator.py
docs/: qa-agent-strategy.md
docs/archive/: qa-agent-strategy-v3-review.md  qa-agent-strategy-v3.md
docs/decisions/: README.md  adr-0001-repo-strategy.md  adr-0002-language-schema-lib.md  adr-0003-evidence-trace-store-stack.md  adr-0004-sandbox-runtime.md
docs/domain/: README.md
docs/knowledge/: README.md  learning-log.md
docs/knowledge/calibration/: README.md
docs/operations/: README.md
docs/plan/: 00-overview.md  phase-0-foundation.md  phase-1-crud-mvp.md  software-quality-knowledge-base-integration.md  trace-run-id-design.md
docs/tasks/: README.md  _template.md
docs/tasks/phase-0/: T-001-adr-0002-language-schema-lib.md  T-002-dev-scaffolding.md  T-003-artifact-base-schema.md  T-004-core-spec-schemas.md  T-005-execution-evidence-schema.md  T-006-test-asset-impact-schemas.md  T-007-reporting-schemas.md  T-008-artifact-validator.md  T-009-test-asset-index-generator.md  T-010-change-impact-generator.md  T-011-adr-evidence-store-stack.md  T-012-trace-run-id-design.md  T-013-evidence-store-minimal.md  T-014-trace-store-minimal.md  T-015-tool-gateway-minimal.md  T-016-tool-gateway-audit-log.md  T-017-adr-sandbox-runtime.md  T-018-sandbox-ephemeral-env.md  T-019-sandbox-fixture-seed.md  T-020-sandbox-runner-determinism.md  T-021-skill-package-convention.md  (+3 more)
evidence_store/: README.md  __init__.py  blob_store.py  errors.py  metadata.py  store.py
models/: __init__.py  artifact_base.py  artifact_base_schema.py  change_impact_spec_schema.py  execution_evidence_schema.py  oracle_spec_schema.py  quality_analytics_snapshot_schema.py  release_readiness_report_schema.py  requirement_spec_schema.py  risk_spec_schema.py  test_asset_index_schema.py
policies/: CHANGELOG.md  README.md  gate-policy.schema.json  gate-policy.yaml
qa-skills/: README.md  manifest.schema.json  registry.schema.json  registry.yaml
qa-skills/_template/: SKILL.md  changelog.md  failure_modes.md  input.schema.json  manifest.yaml  output.schema.json  postconditions.md  preconditions.md
sandbox_env/: README.md  __init__.py  __main__.py  cli.py  clock.py  errors.py  hashing.py  lifecycle.py  manifest.py  seeding.py
sandbox_runner/: README.md  __init__.py  errors.py  models.py  runner.py  state_diff.py
schemas/: README.md  artifact-base.schema.json  change-impact-spec.schema.json  execution-evidence.schema.json  oracle-spec.schema.json  quality-analytics-snapshot.schema.json  release-readiness-report.schema.json  requirement-spec.schema.json  risk-spec.schema.json  test-asset-index.schema.json
scripts/: gen_models.py  regen_task_index.py  skill_registry.py
scripts/task_index/: __init__.py  cli.py  epic_labels.py  epic_labels.toml  frontmatter.py  models.py  render.py
test_asset_index_generator/: README.md  __init__.py  __main__.py  cli.py  discovery.py  generator.py
tests/: test_artifact_base_schema.py  test_artifact_validator.py  test_change_impact_generator.py  test_cli.py  test_core_spec_schemas.py  test_evidence_store.py  test_execution_evidence_schema.py  test_frontmatter.py  test_gate_policy.py  test_gen_models.py  test_module_entrypoints.py  test_render.py  test_reporting_schemas.py  test_sandbox_env.py  test_sandbox_env_seed_clock.py  test_sandbox_runner.py  test_skill_manifest_schema.py  test_skill_registry.py  test_test_asset_impact_schemas.py  test_test_asset_index_generator.py  test_tool_gateway.py  test_tool_gateway_audit.py  test_trace_ids.py  test_trace_store.py
tool_gateway/: README.md  __init__.py  audit.py  builtin_tools.py  errors.py  gateway.py  redaction.py  registry.py  validation.py
trace_ids/: __init__.py  generator.py
trace_store/: README.md  __init__.py  errors.py  records.py  repository.py  store.py
(+42 files in other folders)
